<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_title"
        android:textColor="@color/purple"
        android:textSize="19sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/fp_email_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/email_or_mobile_hint"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fp_cancel"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:text="@string/cancel"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/fp_send_otp"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="@string/send_otp"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>
